@@ -31,90 +31,90 @@ import gov.nyc.doitt.gis.geoclient.function.Field;
 import gov.nyc.doitt.gis.geoclient.test.Fixtures;
 
 public class FieldConverterTest {
-	private FieldConverter.Metadata metadata;
-	private FieldConverter converter;
-	private HierarchicalStreamReader readerMock;
-	private UnmarshallingContext contextMock;
-	private String id;
-	private String start;
-	private String length;
-	private String type;
-	private String isInput;
-	private String alias;
-	private String whitespace;
+    private FieldConverter.Metadata metadata;
+    private FieldConverter converter;
+    private HierarchicalStreamReader readerMock;
+    private UnmarshallingContext contextMock;
+    private String id;
+    private String start;
+    private String length;
+    private String type;
+    private String isInput;
+    private String alias;
+    private String whitespace;
 
-	@BeforeEach
-	public void setUp() throws Exception {
-		this.metadata = new Fixtures().fieldConverterMetadata();
-		this.converter = new FieldConverter(this.metadata);
-		this.readerMock = Mockito.mock(HierarchicalStreamReader.class);
-		this.id = "returnCodeId";
-		this.start = "12";
-		this.length = "6";
-		this.type = metadata.xmlFieldValueCompositeType;
-		this.isInput = "trUe";
-		this.alias = "returnCodeAlias";
-		this.whitespace = "TRUE";
-		contextMock = Mockito.mock(UnmarshallingContext.class);
-	}
+    @BeforeEach
+    public void setUp() throws Exception {
+        this.metadata = new Fixtures().fieldConverterMetadata();
+        this.converter = new FieldConverter(this.metadata);
+        this.readerMock = Mockito.mock(HierarchicalStreamReader.class);
+        this.id = "returnCodeId";
+        this.start = "12";
+        this.length = "6";
+        this.type = metadata.xmlFieldValueCompositeType;
+        this.isInput = "trUe";
+        this.alias = "returnCodeAlias";
+        this.whitespace = "TRUE";
+        contextMock = Mockito.mock(UnmarshallingContext.class);
+    }
 
-	@Test
-	public void testCanConvert() {
-		assertTrue(this.converter.canConvert(Field.class));
-		assertFalse(this.converter.canConvert(Object.class));
-	}
+    @Test
+    public void testCanConvert() {
+        assertTrue(this.converter.canConvert(Field.class));
+        assertFalse(this.converter.canConvert(Object.class));
+    }
 
-	@Test
-	public void testMarshal() {
+    @Test
+    public void testMarshal() {
 
-		assertThrows(UnsupportedOperationException.class, () -> {
-			this.converter.marshal(null, null, null);
-		});
-	}
+        assertThrows(UnsupportedOperationException.class, () -> {
+            this.converter.marshal(null, null, null);
+        });
+    }
 
-	@Test
-	public void testUnmarshal_compositeType() {
-		prepareReaderMock(this.type);
-		Field result = (Field) this.converter.unmarshal(readerMock, contextMock);
-		assertFieldResult(true, result);
-	}
+    @Test
+    public void testUnmarshal_compositeType() {
+        prepareReaderMock(this.type);
+        Field result = (Field) this.converter.unmarshal(readerMock, contextMock);
+        assertFieldResult(true, result);
+    }
 
-	@Test
-	public void testUnmarshal_regularType() {
-		prepareReaderMock("REG");
-		Field result = (Field) this.converter.unmarshal(readerMock, contextMock);
-		assertFieldResult(false, result);
-	}
+    @Test
+    public void testUnmarshal_regularType() {
+        prepareReaderMock("REG");
+        Field result = (Field) this.converter.unmarshal(readerMock, contextMock);
+        assertFieldResult(false, result);
+    }
 
-	@Test
-	public void testUnmarshal_nullType() {
-		prepareReaderMock(null);
-		Field result = (Field) this.converter.unmarshal(readerMock, contextMock);
-		assertFieldResult(false, result);
-	}
+    @Test
+    public void testUnmarshal_nullType() {
+        prepareReaderMock(null);
+        Field result = (Field) this.converter.unmarshal(readerMock, contextMock);
+        assertFieldResult(false, result);
+    }
 
-	private void prepareReaderMock(String typeToUse) {
-		Mockito.when(this.readerMock.getAttribute(metadata.xmlFieldAttributeId)).thenReturn(id);
-		Mockito.when(this.readerMock.getAttribute(metadata.xmlFieldAttributeStart)).thenReturn(start);
-		Mockito.when(this.readerMock.getAttribute(metadata.xmlFieldAttributeLength)).thenReturn(this.length);
-		Mockito.when(this.readerMock.getAttribute(metadata.xmlFieldAttributeType)).thenReturn(typeToUse);
-		Mockito.when(this.readerMock.getAttribute(metadata.xmlFieldAttributeInput)).thenReturn(this.isInput);
-		Mockito.when(this.readerMock.getAttribute(metadata.xmlFieldAttributeAlias)).thenReturn(this.alias);
-		Mockito.when(this.readerMock.getAttribute(metadata.xmlFieldAttributeWhitespace)).thenReturn(this.whitespace);
-	}
+    private void prepareReaderMock(String typeToUse) {
+        Mockito.when(this.readerMock.getAttribute(metadata.xmlFieldAttributeId)).thenReturn(id);
+        Mockito.when(this.readerMock.getAttribute(metadata.xmlFieldAttributeStart)).thenReturn(start);
+        Mockito.when(this.readerMock.getAttribute(metadata.xmlFieldAttributeLength)).thenReturn(this.length);
+        Mockito.when(this.readerMock.getAttribute(metadata.xmlFieldAttributeType)).thenReturn(typeToUse);
+        Mockito.when(this.readerMock.getAttribute(metadata.xmlFieldAttributeInput)).thenReturn(this.isInput);
+        Mockito.when(this.readerMock.getAttribute(metadata.xmlFieldAttributeAlias)).thenReturn(this.alias);
+        Mockito.when(this.readerMock.getAttribute(metadata.xmlFieldAttributeWhitespace)).thenReturn(this.whitespace);
+    }
 
-	private void assertFieldResult(boolean isComposite, Field field) {
-		assertEquals(this.id, field.getId());
-		Integer startInt = Integer.valueOf(start);
-		assertEquals(new Integer(startInt - 1), field.getStart());
-		Integer lengthInt = Integer.valueOf(this.length);
-		assertEquals(lengthInt, field.getLength());
-		assertEquals(isComposite, field.isComposite());
-		boolean impBool = Boolean.parseBoolean(this.isInput);
-		assertEquals(impBool, field.isInput());
-		assertEquals(this.alias, field.getAlias());
-		boolean whitespaceBool = Boolean.parseBoolean(this.whitespace);
-		assertEquals(whitespaceBool, field.isWhitespaceSignificant());
-	}
+    private void assertFieldResult(boolean isComposite, Field field) {
+        assertEquals(this.id, field.getId());
+        Integer startInt = Integer.valueOf(start);
+        assertEquals(new Integer(startInt - 1), field.getStart());
+        Integer lengthInt = Integer.valueOf(this.length);
+        assertEquals(lengthInt, field.getLength());
+        assertEquals(isComposite, field.isComposite());
+        boolean impBool = Boolean.parseBoolean(this.isInput);
+        assertEquals(impBool, field.isInput());
+        assertEquals(this.alias, field.getAlias());
+        boolean whitespaceBool = Boolean.parseBoolean(this.whitespace);
+        assertEquals(whitespaceBool, field.isWhitespaceSignificant());
+    }
 
 }
